fix alignment.

--- a/src/components/Reactions/Reactions.module.css
+++ b/src/components/Reactions/Reactions.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   width: 100%;
   overflow-x: hidden;
-  padding: 0px 4px 0px 14px;
+  padding: 0px 4px 0px 8px;
 }
 .allEmojis::-webkit-scrollbar {
   /* WebKit */
